my fourth commit

--- a/index.html
+++ b/index.html
@@ -74,6 +74,67 @@
 
             </div>
         </div>
+        <div class="Destination">
+          <div class="destination-contant">
+            <h3 class="common-titel">Choose Your Destination</h3>
+            <p class="desti-dis">Cox’s Bazar has the top tourist attraction in Bangladesh. <br>Check out the list of top tourist attractions of Cox’s Bazar</p>
+          </div>
+            <div class="destination-img">
+                <img class="one" src="Images/Group 39.png" alt="">
+                <img class="two" src="Images/Group 40.png" alt="">
+                <img class="three" src="Images/Rectangle 5.png" alt="">
+                <img class="four" src="Images/Rectangle 6.png" alt="">
+                
+                <img class="five" src="Images/Rectangle 7.png" alt="">
+                <img class="six" src="Images/Rectangle 8 (1).png" alt="">
+                <img class="seven" src="Images/Rectangle 9.png" alt="">
+            </div>
+        </div>
+        <div class="video-container">
+            <h3 class="common-titel">Cox's bazar history </h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/tCK3SFQ2gB0?si=pld_7xZAZfe6jbws&amp;start=37" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <div class="why-chose">
+           <div class="why-chose-head">
+            <h3 class="common-titel">Why Choose Us</h3>
+            <p class="common-dis">When you plan a trip to a new destination, the first thing that comes to mind is when you should go? Bangladesh is a six-season country; thus, each season offers visitors a unique perspective and beauty.</p>
+           </div>
+           <div class="why-chose-main">
+           <div class="main-card-1"> 
+            <i class="fa-solid hotel fa-hotel"></i>
+            <h4 class="chose-main-titel">Handpicked Hotels</h4>
+            <p class="main-dis">If 5-star luxury hotels aren't the criteria you are looking for, in that case, you may try Neshorgo, Grace Cox's, Sea Palace, Windy Terrace, Laguna Beach Hotel and Resort etc., that will meet your need at a significant competitive price.</p></div>
+           <div class="main-card-2"> 
+            <i class="fa-solid location fa-location-dot"></i>
+            <h4 class="chose-main-titel">World Class Service</h4>
+            <p class="main-dis">Cox's Bazar offers a variety of seafood such as grilled lobster, baked lobster, baked and fried clubs, red snappers, tuna stuffed potatoes, stuffed shrimp, fried shrimp and squid...</p></div>
+          
+        </div>
+        <div class="main-card-3"> 
+            <i class="fa-solid mony fa-money-check"></i>
+            <h4 class="chose-main-titel">Best Price Guarantee</h4>
+            <p class="main-dis">discovary travel is the leading OTA platform in Bangladesh, which offers the lowest flight rates, exclusive hotel deals, and customised tour packages in Cox's Bazar. </p></div>
+           </div>
+           <div class="deals">
+            <div class="deals-head">
+                <h3 class="common-titel">Deals & Discounts</h3>
+                <p class="common-dis">Explore Cox's Bazar: A Complete Travel Guide</p>
+            </div>
+            <div class="deals-main-1">
+             <div class="deals-main-contant-1">
+                <div class="main-head">
+                    <i class="fa-solid   fa-clock">7 Day / 6 Night</i>
+                    <i class="fa-solid  fa-users">Max : 10</i>
+                    <i class="fa-solid  fa-location-dot"> sentmartin</i>
+                   </div>
+                   <h3 class="range">premium</h3>
+                   <p class="common-dis">The only way to reach Saint Martin Island is by water transportation: boats and ships (mostly for tourists) from Cox Bazar and Teknaf. </p>
+                   <p class="price">Price: $100-$500</p>
+                   <button class="btn-praimary">Book Now</button>
+                </div>
+             </div>
+
+           </div>
     </main>
     <footer>
 
