my sixth commit

--- a/index.html
+++ b/index.html
@@ -153,7 +153,22 @@
 
 
     <footer>
+        <div class="foot-titel">
+            <i class="fa-solid foot-icon  fa-plane-departure"><span style="color: black;">Discovary</span> Travel</i>
+            </div>
+            <p class="foot-dis">Traveling Makes You More Mentally and Physically Healthy</p>
 
+            <div class="foot-icons">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-brands fa-square-x-twitter"></i>
+            </div>
+            <hr>
+
+            <p class="foot-date">2013, All Rights Reserved.</p>
+            
+        
     </footer>
 </body>
 </html>
